--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/brown-stew.html">Brown Stew</a>
+        <ul>
+            <li><a href="recipes/brown-stew.html">Brown Stew</a></li>
+            <li><a href="recipes/green-curry.html">Green Curry</a></li>
+            <li><a href="recipes/sec-mcgriddle.html">Sausage, Egg and Cheese McGriddle</a></li>
+        </ul>
     </body>
 </html>
