--- a/recipes/brown-stew.html
+++ b/recipes/brown-stew.html
@@ -7,7 +7,28 @@
 
     <body>
         <h1>Brown Stew</h1>
+        <img src="../images/brown-stew.jpg" alt="A bowl of delicious brown stew">
+        <h4>A Japanese take on European stew.</h4>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Tasty brown stew block</li>
+            <li>protein of choice</li>
+            <li>1 medium sized sweet onion</li>
+            <li>3 small yukon potatoes</li>
+            <li>1 good sized carrot</li>
+            <li>2.5 cups of water</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Stir-fry the meat and vegetables well with oil. (Approx. 5 min. over medium heat)</li>
+            <li>Add the water and once it comes to a boil, turn down to low heat.
+                Put a lid on the pot leaving a small gap between the lid and pot and simmer until the ingredients become soft. 
+                (Approx. 30 min. over low heat after mixture comes to a boil)</li>
+            <li>Turn off the heat, then break the S&B Tasty Brown Stew Mix into pieces, and stir until the pieces are completely melted.
+                Simmer on low heat for approximately 5 minutes.</li>
+            <li>Serve hot with rice or bread of your choice.</li>
+        </ol>
 
-        <a href="../index.html">Index</a>
+        <footer><a href="../index.html">Index</a></footer>
     </body>
 </html>
